# raspi_headtracking

./: .gitignore  CMakeLists.txt  hidtest  hidtest.c  makefile
head_tracking/: Calibrator.cpp  Calibrator.h  CalibratorInterface.h  Controller.cpp  Controller.h  ControllerInterface.cpp  ControllerInterface.h  IMUSensor.cpp  IMUSensor.h  MarkerFinder.cpp  MarkerFinder.h  main.cpp
head_tracking/com/: COBS.cpp  COBS.h  CommandParser.cpp  CommandParser.h  RpiSerial.cpp  RpiSerial.h  SerialInterface.h
head_tracking/tracking/: Feature.cpp  Feature.h  FeatureFinder.cpp  FeatureFinder.h  MarkerTracker.cpp  MarkerTracker.h  PnPSolver.cpp  PnPSolver.h
head_tracking/tracking/epnp/: mepnp.cpp  mepnp.h  precomp.hpp
head_tracking/utility/: Checkerboard.cpp  Checkerboard.h  Quarternion.cpp  Quarternion.h  Rectangle.cpp  Rectangle.h  Transformation.cpp  Transformation.h  Vector3f.cpp  Vector3f.h  YUVImage.cpp  YUVImage.h  vector3f.cpp  vector3f.h
host_applications/linux/apps/raspicam/: CMakeLists.txt  Makefile  RaspiVidYUV.c
rpi_camera/host_applications/linux/apps/raspicam/: CMakeLists.txt  CaptureHandler.cpp  CaptureHandler.h  Makefile  RaspiCamControl.c  RaspiVidYUV.c
test/data/: ir_tracking_4point.avi  ir_tracking_easy.avi  ir_tracking_stress.avi
test/src/: main.cpp  test_COBS.cpp  test_Calibrator.cpp  test_Checkerboard.cpp  test_Controller.cpp  test_FeatureFinder.cpp  test_IMU.cpp  test_MarkerFinder.cpp  test_MarkerTracker.cpp  test_Quaternion.cpp  test_Rectangle.cpp  test_YUVImage.cpp  test_vector3.cpp
test/src/mock/: MockCalibrator.cpp  MockCalibrator.h  MockController.cpp  MockController.h  MockSerial.cpp  MockSerial.h
test/vsproject/HeadTracking_Test/: HeadTracking_Test.sln
test/vsproject/HeadTracking_Test/HeadTracking_Test/: HeadTracking_Test.vcxproj  HeadTracking_Test.vcxproj.filters  MockController.h  test_Controller.cpp
